refact: Simplify `resource_type`
